# foldy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO  go.mod  go.sum
charts/apps/: Chart.yaml  values.yaml
charts/ci/: Chart.yaml
charts/controller/: Chart.yaml  values.yaml
charts/ui/: Chart.yaml  (+1 more)
cli/: Dockerfile
controller/: Cargo.toml  up
controller/cmd/controller/: main.go
controller/definitions/: build.sh  definitions.go
controller/deploy/: controller.yaml  role.yaml  role_binding.yaml  service_account.yaml
controller/deploy/crds/: app.foldy.dev_v1alpha1_backend_cr.yaml  app.foldy.dev_v1alpha1_dataset_cr.yaml  app.foldy.dev_v1alpha1_experiment_cr.yaml  app.foldy.dev_v1alpha1_model_cr.yaml
controller/pkg/apis/: addtoscheme_app_v1alpha1.go
controller/pkg/controller/: add_backend.go  add_dataset.go  add_experiment.go  add_model.go  add_transform.go
controller/pkg/controller/backend/: backend_controller.go
controller/pkg/controller/dataset/: dataset_controller.go
controller/pkg/controller/experiment/: experiment_controller.go
controller/pkg/controller/model/: model_controller.go
controller/pkg/controller/transform/: transform_controller.go
controller/src/: types.rs
examples/: config.yaml  example.yaml  function.yaml
extra/: certmanager_application.yaml  install.sh
proteinnet/: Cargo.toml  definitions.go
proteinnet/src/: main.rs
sal/: .gitignore  Cargo.toml  test.sh
sal/definitions/: build.sh  definitions.go
sal/src/: blocking_client.rs  lib.rs  main.rs  server.rs  server_actixweb.rs  types.rs
ui/: Dockerfile  pubspec.yaml
(+58 files in other folders)
