[package]
name = "proteinnet"
version = "0.1.0"
authors = ["Tom Havlik <keres993@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json"] }
colored = "1.9.3"
clap = { git = "https://github.com/clap-rs/clap/" }
actix-web = "2"
actix-rt = "1"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.39"
ftp = "3.0.1"

