[package]
name = "sal"
version = "0.1.0"
authors = ["Tom Havlik <keres993@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[lib]
bench = false